--- a/materials/public/css/scss/style.scss
+++ b/materials/public/css/scss/style.scss
@@ -127,8 +127,6 @@ footer {
     }
     &-card {
         flex-basis: 27rem;
-        border: var(--clr-dark) 1px solid;
-        border-radius: 1rem;
         margin-top: 1rem;
     }
     &-sidebar {
